<resources>
    <string name="app_name">文峰网络教学</string>
    <string name="exerciselist_title">作业列表</string>
    <string name="search">搜索</string>
    <string name="tab_recent">最近</string>
    <string name="tab_doing">进行中</string>
    <string name="tab_done">已截止</string>
    <string name="tab_finished">已完成</string>
    <string name="empty_exercise">暂无作业</string>
    <string name="update_exercise">更新作业</string>
    <string name="exercise_uptate_time">最近更新:</string>
    <string name="start_date">开始:</string>
    <string name="end_date">截止:</string>
    <string name="test_create_teacher_name">出题人:</string>
    <string name="test_create_teacher_name2">出题人</string>
    <string name="exercise_create_teacher_name">布置人:</string>
    <string name="mreturn">返回</string>
    <string name="exercise_detail_title">作业详情</string>
    <string name="sync">同步</string>
    <string name="exercise_title">标题:</string>
    <string name="sum_test_count">总题数:</string>
    <string name="finished_test_count">已完成:</string>
    <string name="exercise_content">作业内容:</string>
    <string name="exercise_remark">作业备注:</string>
    <string name="attachment">附件:</string>
    <string name="readed_attachment">已读附件:</string>
    <string name="unreaded_attachment">未读附件:</string>
    <string name="exercise_feedback">教师评语:</string>
    <string name="exercise_score">分数</string>
    <string name="exercise_feedback_hint">请先完成作业哦!</string>
    <string name="start_the_answer">开始答题</string>
    <string name="answers">答题情况</string>
    <string name="tip_network_unavailable">无网络连接,请稍后再试</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="menu_logout">注销</string>
    <string name="menu_language">English</string>
    <string name="tip_update_success">更新成功</string>
    <string name="tip_connection_timeout">服务器连接超时,请稍后重试</string>
    <string name="cancel">取消</string>
    <string name="tip_attachment_download_success">下载成功</string>
    <string name="tip_file_not_exist">文件不存在,是否重新下载?</string>
    <string name="confirm">确定</string>
    <string name="menu_download_answers">web到客户端(答题情况)</string>
    <string name="menu_upload_answers">客户端到web(答题情况)</string>
    <string name="menu_update_exercises">更新作业</string>
    <string name="tip_upload_answers_success">上传成功</string>
    <string name="tip_upload_no_answer">还未作答任何题目,不要交白卷哦!</string>
    <string name="tip_exercise_checking">作业批改中,请耐心等待</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="log_in">登录</string>
    <string name="login_tip">支持平台帐号和教务在线帐号</string>
    <string name="test_title_reading">答题</string>
    <string name="test_level">类型:</string>
    <string name="save">保存</string>
    <string name="comment_title">热门评论</string>
    <string name="empty_comment">暂无评论</string>
    <string name="empty_comment_content">你还没输入任何内容哦</string>
    <string name="make_comment_hint">我来说两句...</string>
    <string name="send">发送</string>
    <string name="retry">重试</string>
    <string name="subject_question_eidt_hint">填写答案</string>
    <string name="save_success">保存成功</string>
    <string name="my_answer">我的答案:</string>
    <string name="ref_answer">参考答案:</string>
    <string name="update_exercise_message">作业下载中,请耐心等待。。。</string>
    <string name="download_exercise">下载作业</string>
    <string name="import_exercise">导入作业</string>
    <string name="download_test">下载题目</string>
    <string name="import_test">导入题目</string>
    <string name="download_test_item">下载题干</string>
    <string name="import_test_item">导入题干</string>
    <string name="download_test_item_option">下载选项</string>
    <string name="import_test_item_option">导入选项</string>
    <string name="no_task_update">暂无更新</string>
    <string name="tip_pass_account_no_match">用户名或密码错误</string>
    <string name="tip_pass_account_is_null">用户名或者密码不能为空</string>
    <string name="tip_changes_from_web">本次作业有变动,是否立即更新?</string>
    <string name="tip_task_cancel">老师已经取消了本次作业!</string>
    <string name="tip_sdcard_not_exist">未发现SD卡</string>
    <string name="preview_picture">预览图片</string>
    <string name="audio_record">录音</string>
    <string name="tip_audio_record_setup_fail">抱歉,启动录音机失败!</string>
    <string name="tip_play_audio_error">抱歉,播放失败!</string>
    <string name="file_explore">文件选择</string>
    <string name="tip_upload_fail">上传失败</string>
    <string name="tip_no_answers_from_web">web端尚未作答</string>
    <string name="file_already_upload">已上传</string>
    <string name="image">图片</string>
    <string name="document">文档</string>
    <string name="audio">音频</string>
    <string name="selected">已选:</string>
    <string name="tip_upload_file_size_over_max">单个文件不能超过5MB</string>
    <string name="upload_files_title">文件上传中,请耐心等待</string>
    <string name="upload_file_sum_count">总共:</string>
    <string name="upload_file_success_count">成功:</string>
    <string name="upload_file_fail_count">失败:</string>
    <string name="upload">上传</string>
    <string name="answer_upload_date">答案上传:</string>
    <string name="answer_upload_date_hint">暂未上传过答案</string>
    <string name="set">设置</string>
    <string name="check_app_version">检查软件更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="tip_get_local_version_code_fail">获得本地版本号失败</string>
    <string name="app_download_title">有最新版本,是否下载?</string>
    <string name="app_publish_date">发布日期:</string>
    <string name="app_version_name">版本:</string>
    <string name="size">大小:</string>
    <string name="tip_start_download">已开始下载</string>
    <string name="no_more_next_page">已经是最后一页</string>
    <string name="no_more_previous_page">已经是第一页</string>
    <string name="school">学校:</string>
    <string name="department">部门:</string>
    <string name="email">邮箱:</string>
    <string name="tip_set_network">网络不可用,立即检查?</string>
    <string name="publish_task">添加作业</string>
    <string name="student">学生:</string>
    <string name="exams">题库:</string>
    <string name="selectAll">全选</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="is_discuss">允许讨论:</string>
    <string name="delete_task_fail">删除失败</string>
    <string name="delete_task_success">删除成功</string>
    <string name="delete_confirm">确定删除?</string>
    <string name="duplicated_task_title">标题重复!</string>
    <string name="empty_task_title">标题不能为空</string>
    <string name="arrange_student">安排学生</string>
    <string name="tab_unselected">待选</string>
    <string name="tab_selected">已选</string>
    <string name="student_number">学号</string>
    <string name="name">姓名</string>
    <string name="student_class">班级</string>
    <string name="major">专业</string>
    <string name="academy">学院</string>
    <string name="academy2">学院:</string>
    <string name="key_word">关键字:</string>
    <string name="hint_select_depatment">选择学院</string>
    <string name="search_student_keyword_hint">如:学号  姓名  专业</string>
    <string name="my_list">已收藏:</string>
    <string name="none">不限</string>
    <string name="error_input">输入不合法!</string>
    <string name="arrange_student_fail">安排学生失败</string>
    <string name="arrange_student_success">添加学生成功</string>
    <string name="arrange_test_fail">安排题库失败</string>
    <string name="arrange_test_success">添加题库成功</string>
    <string name="error">操作失败!</string>
    <string name="return_confirm">确定返回?未保存的数据将丢失!</string>
    <string name="score">批改</string>
    <string name="submitTime">最近提交:</string>
    <string name="score2">分数:</string>
    <string name="auto_score">自动评分</string>
    <string name="post_score">公布分数</string>
    <string name="hide_score">隐藏分数</string>
    <string name="no_arranged_students">没有安排学生!</string>
    <string name="feedBack">评语</string>
    <string name="make_score">评分</string>
    <string name="objective_question">客观题:</string>
    <string name="right_answer_count">答对:</string>
    <string name="accuracy">正确率:</string>
    <string name="test_category">题型:</string>
    <string name="subjective_question">主观题:</string>
    <string name="download">下载</string>
    <string name="open">打开</string>
    <string name="select_operation">选择操作方式</string>
    <string name="tip_task_is_over">作业已截止!</string>
    <string name="new_app_content">更新内容:</string>
    <string name="task_select">作业选择</string>
    <string name="title">标题:</string>
    <string name="no_more_data">没有新的数据了!</string>
    <string name="download_finished_task">下载已完成作业</string>
    <string name="download_attachment">下载附件</string>
    <string name="import_attachment">导入附件</string>
    <string name="plan_list">计划列表</string>
    <string name="add_plans">新增计划</string>
    <string name="empty_plans">暂无计划</string>
    <string name="self_learning">自主学习</string>
    <string name="interactive_learning">作业管理</string>
    <string name="empty_input_error">内容不能为空</string>
    <string name="plan_detail">计划详情</string>
    <string name="recent_answering_time">最近答题:</string>
    <string name="add_test">添加题目</string>
    <string name="test_type">题目类型:</string>
    <string name="test_level2">题目难度</string>
    <string name="added_test">已添加</string>
    <string name="available_test">可添加</string>
    <string name="available_test2">可用</string>
    <string name="test_to_add">添加量</string>
    <string name="test_to_add2">选择量</string>
    <string name="reset">重置</string>
    <string name="reset_plan_confirm">所有已安排的作业将被清空,确定要重置?</string>
    <string name="sync_from_local_to_web">客户端到web端</string>
    <string name="sync_from_web_to_local">web端到客户端</string>
    <string name="radio_unscored">未评分</string>
    <string name="radio_scored">已评分</string>
    <string name="radio_have_attachment">有附件</string>
    <string name="radio_no_attachment">无附件</string>
    <string name="tip_empty_sDate_eDate_is_not_allowed">开始或截止日期不能为空!</string>
    <string name="add">添加</string>
    <string name="arrange_test">安排题库</string>
    <string name="hint_select_testType">选择题型</string>
    <string name="title2">标题</string>
    <string name="test_category2">题型</string>
    <string name="test_level3">难度</string>
    <string name="domain">领域</string>
    <string name="auto_score_success">评分成功</string>
    <string name="student_attachment_list">学生附件</string>
    <string name="next_step">下一步</string>
    <string name="next_step1">保存基本信息，下一步</string>
    <string name="next_step2">保存学生安排，下一步</string>
    <string name="finish">完成</string>
    <string name="select_resource">选择资源</string>
    <string name="select_topic">选择专题</string>
    <string name="resource_type">资源类型:</string>
    <string name="resource_type2">专题</string>
    <string name="submit">提交</string>
    <string name="free_study_submit_dialog_radio1">查看答题情况</string>
    <string name="free_study_submit_dialog_radio2">保存为我的计划(需要登录)</string>
    <string name="save_fail">保存失败</string>
    <string name="tip_free_study_save_as_plan">计划导入中，请耐心等待。。。</string>
    <string name="tip_file_cannot_play">文件不能播放!</string>
    <string name="tip_no_resource_selected">请至少选择一个资源</string>
    <string name="download_confirm">是否下载？</string>
    <string name="upload_attachment">上传附件</string>
    <string name="show_answers">显示答案</string>
    <string name="hide_answers">隐藏答案</string>
    <string name="save_as_plan">存为计划</string>
    <string name="save_answers">保存答题</string>
    <string name="tip_login_user_can_make_comment">只有登录的用户才能发表评论，是否立即登录？</string>
    <string name="tip_over_max_resource_count">最多能选50道题！</string>
    <string name="tip_enddate_earlier_than_startdate">截止日期不能早于开始日期</string>
    <string name="no_answers">暂无参考答案</string>
    <string name="score_range">分数只能在0-100</string>
    <string name="feedback_hint">输入评语</string>
    <string name="make_feedback_success">发表成功</string>
    <string name="no_local_resource">没有本地资源，请连接网络!</string>
    <string name="update">更新</string>
    <string name="update_success">更新成功</string>
    <string name="app_feedback">反馈</string>
    <string name="app_feedback_hint">快来吐槽吧</string>
    <string name="contact_info_hint">(选填)留下联系方式，如QQ、邮箱、电话等</string>
    <string name="exercise_history">作业历史</string>
</resources>