<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/student_number" />
    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/divider"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name" />
    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/student_class" />
    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/major" />
    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/divider"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/academy" />
    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/divider"
        />

</LinearLayout>
