<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:id="@+id/top"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_darkgreen"
         >
         
        <TextView
            android:id="@+id/returnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/mreturn" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/file_explore" />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/cancel" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/includeTab"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/top"
	    android:orientation="vertical"
	    android:background="#ffffff"
        >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="#ffffff"
	    >
	    <TextView
            android:id="@+id/tab_recent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/file_already_upload"
        	android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="15dp"
            />

        <TextView
            android:id="@+id/tab_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/image"
            android:gravity="center"
            android:paddingTop="15dp"
            />
       <TextView
            android:id="@+id/tab_document"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/document"
            android:gravity="center"
            android:paddingTop="15dp"
            />
       <TextView
            android:id="@+id/tab_audio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/audio"
            android:gravity="center"
            android:paddingTop="15dp"
            />     
	</LinearLayout>
	<ImageView
	    android:id="@+id/imageView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:scaleType="matrix"
	    android:src="@drawable/tab_select"
	    />
	</LinearLayout>
	
	<android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/includeTab"
        android:layout_above="@+id/bottom"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
	<RelativeLayout
	    android:id="@+id/bottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffff"
	    android:layout_alignParentBottom="true"
	    android:paddingTop="5dp"
		android:paddingBottom="5dp"
	     >
      <TextView
           android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_marginLeft="30dp"
           android:layout_centerVertical="true"
           android:text="@string/selected" />
      <TextView
          android:id="@+id/selectedFiles"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_toRightOf="@+id/textView"
          android:layout_centerVertical="true"
          android:paddingLeft="3dp"
          android:text="0"
          />
      <Button
            android:id="@+id/sendButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_alignParentRight="true"
            android:layout_height="28dp"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/textview_border"
            android:enabled="false"
            android:text="@string/upload" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>
