<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
	    android:id="@+id/top" 	   
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:background="@color/background_darkgreen">
	  <TextView
        android:id="@+id/returnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/mreturn"
       />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/app_feedback" />
	</RelativeLayout>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/app_feedback_hint" 
        android:gravity="top|start"
        android:maxLength="120"
        android:background="@drawable/edit_text_style"
        />
    
    <EditText
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:gravity="top|start"
        android:hint="@string/contact_info_hint"    
        android:maxLength="20"
        android:background="@drawable/edit_text_style"
        />
    
    <Button
        android:id="@+id/submitButton"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style3"       
        android:text="@string/submit"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

</LinearLayout>
