<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
	    android:id="@+id/top" 
	    android:layout_alignParentTop="true"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:background="@color/background_darkgreen">
	  <TextView
        android:id="@+id/returnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/mreturn"
       />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:singleLine="true"
        android:maxEms="8"
        android:ellipsize="end"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="作业的标题" />

	</RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/selectBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        >

    <RadioGroup
        android:id="@+id/scoreGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
         >

        <RadioButton
            android:id="@+id/scored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_scored"
            />
        <RadioButton
            android:id="@+id/unscored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_unscored"
            />
        <RadioButton
            android:id="@+id/allScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/selectAll"
            />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/attachmentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreGroup"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
         >

        <RadioButton
            android:id="@+id/files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_have_attachment"
            />
        <RadioButton
            android:id="@+id/noFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_no_attachment"
            />
        <RadioButton
            android:id="@+id/allFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:checked="true"
            />
    </RadioGroup>
    </RelativeLayout>
	<ListView
	    android:id="@+id/listView"
	    android:layout_below="@+id/selectBar"
	    android:layout_above="@+id/bottom"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:background="#ffffff"
	    />
	<RelativeLayout
	    android:id="@+id/bottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#E8E8E8"
	    android:layout_alignParentBottom="true"
	    android:paddingTop="5dp"
		android:paddingBottom="5dp"
	     >   
		<Button
		    android:id="@+id/autoScoreButton"
		    android:layout_width="wrap_content"
		   	android:layout_height="30dp"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="10dp"
	        android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:background="@drawable/button_style2"
		    android:text="@string/auto_score" />

		<Button
		    android:id="@+id/postScoreButton"
		    android:layout_width="wrap_content"
		    android:layout_height="30dp"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="10dp"
		    android:background="@drawable/button_style2"
		    android:text="@string/post_score"
		    android:textColor="#ffffff"
		    android:textSize="15sp" >

	    </Button>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
